current module path auto set

--- a/templates/acmcme-sports-block.html.twig
+++ b/templates/acmcme-sports-block.html.twig
@@ -21,10 +21,10 @@ set classes = [
         <table id='acm' {{ attributes.addClass(classes) }}>
          <thead>
             <tr style="white-space: nowrap;">
-               <th id='acm_id' >ID<img width="16" height="auto"  src="modules/custom/code_challenge/img/arrows.png" usemap="#arrows"><map name="arrows"><area shape="rect" coords="0,0,16,8" href=""  alt="id" class="up"><area shape="rect" coords="0,8,16,16" href=""  alt="id" class="down"></map></th>
+               <th id='acm_id' >ID<img width="16" height="auto"  src="{{ content.module_path }}/img/arrows.png" usemap="#arrows"><map name="arrows"><area shape="rect" coords="0,0,16,8" href=""  alt="id" class="up"><area shape="rect" coords="0,8,16,16" href=""  alt="id" class="down"></map></th>
                 <th id='acm_name'>Name</th>
                 <th id='acm_conf'>Conference</th>
-                <th id='acm_divs'>Division<img width="16" height="auto"  src="modules/custom/code_challenge/img/arrows.png" usemap="#arrows"><map name="arrows"><area shape="rect" coords="0,0,16,8" href=""  alt="divi" class="up"><area shape="rect" coords="0,8,16,16" href=""  alt="divi" class="down"></map></th>
+                <th id='acm_divs'>Division<img width="16" height="auto"  src="{{ content.module_path }}/img/arrows.png" usemap="#arrows"><map name="arrows"><area shape="rect" coords="0,0,16,8" href=""  alt="divi" class="up"><area shape="rect" coords="0,8,16,16" href=""  alt="divi" class="down"></map></th>
            </tr>
            </thead>
            <tbody>
